rename miners gateways

--- a/docs/gateways/gateways.mdx
+++ b/docs/gateways/gateways.mdx
@@ -1,8 +1,8 @@
 ---
-id: miners 
+id: gateways 
 hide_title: true
 sidebar_label: Introduction
-slug: /miners
+slug: /gateways
 ---
 
-## Helium Miners
+## Helium Gateways
