--- a/docs/devices/ready-to-use/dragino-lht65.mdx
+++ b/docs/devices/ready-to-use/dragino-lht65.mdx
@@ -26,7 +26,7 @@ The Dragino LHT65 is a multi-sensor device which includes a built in temperature
 
 ### Add Device to Console
 
-To start, you'll need to add your device to Console. You should have been provided with a DevEUI, AppEUI, and AppKey inside the device packaging.  Follow our [quickstart ](../../console/quickstart.md)for instructions on how to add a new device to Console.
+To start, you'll need to add your device to Console. You should have been provided with a DevEUI, AppEUI, and AppKey inside the device packaging.  Follow our quickstartfor instructions on how to add a new device to Console.
 
 ### Join Device to Network
 
@@ -42,7 +42,7 @@ Once you have seen an event similar to above, your device is now joined to the n
 
 ### myDevices Cayenne
 
-If you would like to easily view your device's data on a web or mobile dashboard for free, this device is supported out of the box by myDevices Cayenne via the integration on Console. You can learn how to quickly setup this integration [here](../../console/integrations/mydevices-cayenne-integration.md).
+If you would like to easily view your device's data on a web or mobile dashboard for free, this device is supported out of the box by myDevices Cayenne via the integration on Console. You can learn how to quickly setup this integration here.
 
 ### Decode Device Payload
 
@@ -50,11 +50,11 @@ When this device transmits its data, it does so in a space efficient manner by p
 
 <img src={useBaseUrl('img/devices/ready-to-use/dragino-lht65-byte-packing.png')}/>
 
-If you would like to decode the device payload to view it in Console or send to your own application, this section will show you how.  We'll be using a Console Function Decoder to unpack the device payload into a human readable form, you can learn more about Functions in general [here](../../console/functions.md).
+If you would like to decode the device payload to view it in Console or send to your own application, this section will show you how.  We'll be using a Console Function Decoder to unpack the device payload into a human readable form, you can learn more about Functions in general here).
 
 #### Create Function Decoder
 
-Lets begin by creating a new custom function decoder. First enter a name, select decoder for function type, and finally custom script since we'll be inputting our own script. Next, remove the template custom script, and copy and paste the entire script found [here ](https://www.dragino.com/downloads/downloads/LHT65/payload_decode/ttn_payload_decode_v1.7.txt)into the script editor. Last, create a label that we'll use to attach this decoder to the device with.
+Lets begin by creating a new custom function decoder. First enter a name, select decoder for function type, and finally custom script since we'll be inputting our own script. Next, remove the template custom script, and copy and paste the entire script found [here](https://www.dragino.com/downloads/downloads/LHT65/payload_decode/ttn_payload_decode_v1.7.txt)into the script editor. Last, create a label that we'll use to attach this decoder to the device with.
 
 <img src={useBaseUrl('img/devices/ready-to-use/dragino-lht65-decoder.png')}/>
 
@@ -66,10 +66,10 @@ Next navigate to the device page and attach the label we just created for the fu
 
 #### Viewing Decoded Device Data
 
-Once you have attached the decoder we can now open the Debug window to view the decoded device payload in the received uplink. You can learn more about the Debug tool [here](../../console/debug.md). To open the Debug window just click on the bug icon on the right side of the device page. Once you have the Debug window open you can wait for the next packet to transmit or force a manual transmission by holding down the ACT button for more then one second and less then three. You'll see the LED turn green while you hold it down and then it should turn red briefly after releasing. You should see the uplink message with the decoded fields as shown below.
+Once you have attached the decoder we can now open the Debug window to view the decoded device payload in the received uplink. You can learn more about the Debug tool here. To open the Debug window just click on the bug icon on the right side of the device page. Once you have the Debug window open you can wait for the next packet to transmit or force a manual transmission by holding down the ACT button for more then one second and less then three. You'll see the LED turn green while you hold it down and then it should turn red briefly after releasing. You should see the uplink message with the decoded fields as shown below.
 
 <img src={useBaseUrl('img/devices/ready-to-use/dragino-lht65-decoded-payload.png')}/>
 
 ### Sending Device Payload to Your Application
 
-To learn more about how to send the device data payload to your own application checkout the Console integrations [here](../../console/integrations/).
+To learn more about how to send the device data payload to your own application checkout the Console integrations here.
