fleshing out the blockchain skelelton

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -11,19 +11,23 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 ### Welcome to the Helium Network
 
-The Helium Network is the largest, public LPWAN in the United States, and enables long range, low power, bi-directional communication for any LoRaWAN compatible device. 
-
-The Helium Network is open and permissionless, and requires no up-front payments, contracts or commitments to use. Devices pay Helium Hotspot owners and other Helium Network Operators on a per-packet basis for delivering their sensors packets to the application end point. 
-
-In this documentation you will find examples, tutorials, specifications, and API references for building on the Helium network.
+The Helium Network is the largest LoRaWAN Network in the North America, and enables long range, low power, bi-directional communication for any LoRaWAN compatible device. 
 
 ##  Blockchain
 
-##  Miners
+The Helium Blockchain is a public blockchain created to underpin the growth of decentralized, verifiable wireless networks. It uses a new, novel proof, called Proof of Coverage, to incentivize miners to create wireless coverage. The Helium Blockchain also creates $HNT, a new utility token used to reward miners and pay transaction fees. 
+
+## Miners
+
+Miners on the Helium Network serve a dual purpose: they create long-range wireless coverage for devices and sensors using the Network; and they are responsible for mining and verifying network transactions. As of October 2020, the Helium Network is approaching 10,000 miners, making it the 2nd largest, fully-decentralized blockchain in the world, behind only the bitcoin blockchain. 
 
 ## Devices
 
+The Helium Network exists to route data for wireless, LoRaWAN-enabled, IoT devices. Whether you're building a weather station from scratch or have a pre-built location tracker from a vendor of your choosing, your device can use the Helium Network to send and receive data anywhere there is coverage.
+
 ## Console
+
+Devices on the Helium Network are deployed and managed through Console, Helium's free, hosted interface for onboarding andsimplifying your
 
 ## Network Servers
 
