--- a/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
+++ b/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
@@ -2,9 +2,7 @@
 id: ready-to-use 
 hide_title: true
 sidebar_label: Ready to Use
-slug: /devices/ready-to-use
+slug: /use-the-network/devices/ready-to-use
 ---
 
 ## Ready to Use Devices
-
-### [Dragino LHT65](ready-to-use/dragino-lht65)
