--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -1,8 +1,8 @@
 ---
-id: console 
+id: mine-hnt 
 hide_title: true
 sidebar_label: Introduction
-slug: /console
+slug: /mine-hnt
 ---
 
-## Helium Console
+## Mine HNT
