--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -1,8 +1,8 @@
 ---
 id: devices
 hide_title: true
-sidebar_label: Introduction
-slug: /devices
+sidebar_label: Devices
+slug: /use-the-network/devices
 ---
 
 ## Helium Devices
@@ -11,10 +11,13 @@ slug: /devices
 The Helium network supports any LoRaWAN capable device meeting the [v1.0.2 specification](https://lora-alliance.org/sites/default/files/2018-05/lorawan1_0_2-20161012_1398_1.pdf).
 
 ### Ready to Use Devices
-Find onboarding guides for some of the most popular devices available [here](/devices/ready-to-use).
 
-### Development Devices
-Find start to finish tutorials for the most popular LoRaWAN development boards today [here](/devices/development).
+* [Dragino LHT65](devices/ready-to-use/dragino-lht65)
+
+### Prototyping
+
+
+
 
 
 
