--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -10,11 +10,10 @@ slug: /use-the-network/devices
 
 The Helium network supports any LoRaWAN capable device meeting the [v1.0.2 specification](https://lora-alliance.org/sites/default/files/2018-05/lorawan1_0_2-20161012_1398_1.pdf).
 
-### Ready to Use Devices
+### [Ready to Use Devices](devices/ready-to-use)
 
-* [Dragino LHT65](devices/ready-to-use/dragino-lht65)
 
-### Prototyping
+### [Development](devices/development) 
 
 
 
