fix devices nav

--- a/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
+++ b/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
@@ -1,7 +1,7 @@
 ---
 id: ready-to-use 
 hide_title: true
-sidebar_label: Ready to Use
+sidebar_label: Introduction 
 slug: /use-the-network/devices/ready-to-use
 ---
 
