--- a/docs/use-the-network/devices/development/development.mdx
+++ b/docs/use-the-network/devices/development/development.mdx
@@ -1,10 +1,10 @@
 ---
 id: development 
 hide_title: true
-sidebar_label: Prototyping
+sidebar_label: Introduction
 slug: /use-the-network/devices/development
 ---
 
-## Development
+## Development Devices
 
 
