--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -13,7 +13,7 @@ The Helium network supports any LoRaWAN capable device meeting the [v1.0.2 speci
 ### [Ready to Use Devices](devices/ready-to-use)
 
 
-### [Development](devices/development) 
+### [Development Devices](devices/development) 
 
 
 
