added more os specific tabs examples

--- a/docs/use-the-network/devices/development/st-b-l072z-lrwan1/arduino.mdx
+++ b/docs/use-the-network/devices/development/st-b-l072z-lrwan1/arduino.mdx
@@ -12,6 +12,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
+## Introduction to Guide
+
+### OS requirements
 <Tabs
   groupId="operating-systems"
   defaultValue="win"
@@ -25,3 +28,19 @@ import TabItem from '@theme/TabItem';
   <TabItem value="linux">Linux Specific Instructions Go Here.</TabItem>
 </Tabs>
 
+
+### More general intsturctions
+
+### OS Specific Instruction
+<Tabs
+  groupId="operating-systems"
+  defaultValue="win"
+  values={[
+    {label: 'Windows', value: 'win'},
+    {label: 'macOS', value: 'mac'},
+    {label: 'Linux', value: 'linux'},
+  ]}>
+  <TabItem value="win">Windows Specific Instructions Go Here.</TabItem>
+  <TabItem value="mac">macOS Specific Instructions Go Here.</TabItem>
+  <TabItem value="linux">Linux Specific Instructions Go Here.</TabItem>
+</Tabs>
