homepage build out

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -7,29 +7,40 @@ slug: /
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-<img alt="Helium Console" src={useBaseUrl('img/banner-home.jpg')} />
+## Helium Documentation
 
-### Welcome to the Helium Network
+Helium is global, distributed network of Miners that create public, long-range wireless coverage for LoRaWAN-enabled IoT devices. Miners produce and are compensated in $HNT, the native cryptocurrency of the Helium blockchain. The Helium blockchain is a new, open source, public blockchain created entirely to incentivize the creation of physical, decentralized wireless networks.  Today, the Helium blockchain, and it thousands of miners, provide access to the largest, public LoRaWAN Network in the world.
 
-The Helium Network is the largest LoRaWAN Network in the North America, and enables long range, low power, bi-directional communication for any LoRaWAN compatible device. 
+This documentation provides details on the technology that underpins Helium, as well as how to mine HNT, and how to deploy IoT devices that use the Helium Network. Start your journey below. If, at any time, you don't find what you need, join us in [discord.gg/helium](https://discorg.gg/helium). 
 
-##  Blockchain
+Thanks for being a part of Helium.
 
-The Helium Blockchain is a public blockchain created to underpin the growth of decentralized, verifiable wireless networks. It uses a new, novel proof, called Proof of Coverage, to incentivize miners to create wireless coverage. The Helium Blockchain also creates $HNT, a new utility token used to reward miners and pay transaction fees. 
+###  Helium Blockchain
 
-## Miners
+* Blockchain Primitives
+* Mining $HNT
+* Proof of Coverage
+* Consensus Protocol
+* The Helium Token
+* Transaction Fees
 
-Miners on the Helium Network serve a dual purpose: they create long-range wireless coverage for devices and sensors using the Network; and they are responsible for mining and verifying network transactions. As of October 2020, the Helium Network is approaching 10,000 miners, making it the 2nd largest, fully-decentralized blockchain in the world, behind only the bitcoin blockchain. 
+### Mine $HNT
 
-## Devices
+* Prebuilt Helium Miners
+* Build Your Own Helium Miner
+* Convert a LoRaWAN Gateway
+ 
+### Use the Helium Network 
 
-The Helium Network exists to route data for wireless, LoRaWAN-enabled, IoT devices. Whether you're building a weather station from scratch or have a pre-built location tracker from a vendor of your choosing, your device can use the Helium Network to send and receive data anywhere there is coverage.
+* Ready to Use Devices
+* Development Devices 
+* Helium Console
+* Network Servers 
 
-## Console
+### Community and Governance
 
-Devices on the Helium Network are deployed and managed through Console, Helium's free, hosted interface for onboarding andsimplifying your
-
-## Network Servers
-
-## Community and Governance
+* Helium Improvement Proposals
+* Discord and other Chat Platforms
+* Social Media
+* Contribute to Helium 
 
