language tweak, link add

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -26,6 +26,7 @@ Thanks for being a part of Helium.
 
 ### Mine $HNT
 
+* What is a Helium Miner?
 * Prebuilt Helium Miners
 * Build Your Own Helium Miner
 * Convert a LoRaWAN Gateway
