--- a/docs/mine-hnt/convert-lorawan-gateway/convert-lorawan-gateway.mdx
+++ b/docs/mine-hnt/convert-lorawan-gateway/convert-lorawan-gateway.mdx
@@ -1,8 +1,8 @@
 ---
 id: convert-lorawan-gateway
 hide_title: true
-sidebar_label: Convert A LoRaWAN Gateway
+sidebar_label: Convert a LoRaWAN Gateway
 slug: /mine-hnt/convert-lorawan-gateway
 ---
 
-## Convert LoRaWAN Gateway to a Helium Miner
+## Convert a LoRaWAN Gateway to a Helium Miner
