--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -1,8 +1,9 @@
 ---
 id: mine-hnt 
 hide_title: true
-sidebar_label: Introduction
+sidebar_label: What is Helium Miner?
 slug: /mine-hnt
 ---
 
-## Mine HNT
+# What is a Helium Miner?
+
