primitives and mining sections ported

--- a/docs/blockchain/blockchain.mdx
+++ b/docs/blockchain/blockchain.mdx
@@ -5,13 +5,20 @@ sidebar_label: Introduction
 slug: /blockchain
 ---
 
-## Helium blockchain
+## The Helium blockchain
 
-The Helium blockchain is a new blockchain built from the ground up to incentivize the creation of decentralized, public wireless networks. It's based on a new, novel work algorithm called Proof of Coverage, and rewards miners in HNT, the native token of the Helium blockchain.  Officially launched on July 29, 2019, the Helium Blockchain is now running on over 10,000 Helium Miners across the world; and powers the largest, public, decentralized LoRaWAN Network in the world.
-
-This documentation is intended to be a mostly-technical overview of the Helium blockchain. That said, it’s not an exhaustive review and those that are looking for full details on things like algorithms will need to refer to the [open source code](https://github.com/helium) that powers the blockchain.
+The Helium blockchain is a new blockchain built from the ground up to incentivize the creation of decentralized, public wireless networks. It's based on a new, novel work algorithm called Proof of Coverage, and rewards miners in $HNT, the native token of the Helium blockchain.  Officially launched on July 29, 2019, the Helium Blockchain is now running on over 10,000 Helium Miners across the world; and powers the largest, public, decentralized LoRaWAN Network in the world.
 
 
+
+* [Blockchain Primitives](blockchain/blockchain-primitives) 
+* [Mining $HNT](blockchain/mining)
+* [Proof of Coverage](blockchain/proof-of-coverage)
+* [Consensus Protocol](blockchain/consensus-protocol) 
+* [The Helium Token](blockchain/helium-token)
+* [Oracles](blockchain/oracles) 
+* [Transaction Fees](blockchain/transaction-fees)
+* [Chain Variables](blockchain/chain-variables)
 
 
  
