--- a/docs/blockchain/mining/hnt-mining-and-rewards.mdx
+++ b/docs/blockchain/mining/hnt-mining-and-rewards.mdx
@@ -1,8 +1,6 @@
 ---
-id: hnt-mining-and-rewards
+id: mining-and-hnt-rewards
 hide_title: true
-sidebar_label: HNT Mining and Rewards
+sidebar_label: Mining
 slug: /blockchain/mining/hnt-mining-and-rewards
 ---
-
-
