fix broken link

--- a/docs/use-the-network/devices/ready-to-use/adeunis-field-test-device.mdx
+++ b/docs/use-the-network/devices/ready-to-use/adeunis-field-test-device.mdx
@@ -25,7 +25,7 @@ The Adeunis Field Test Device \(ARF8124A\) is a great tool for network testing. 
 ### Add Device to Console
 
 To start, you'll need to add your device to Console. You should have been provided with a DevEUI, AppEUI, and AppKey from the seller of the device.
-[//]: # Follow our [quickstart ](../../console/quickstart.md)for instructions on how to add a new device to Console.
+[//]: # Follow our quickstart for instructions on how to add a new device to Console.
 
 ### Device Configuration
 
