add new linking notes and styles

--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -10,10 +10,12 @@ slug: /use-the-network/devices
 
 The Helium network supports any LoRaWAN capable device meeting the [v1.0.2 specification](https://lora-alliance.org/sites/default/files/2018-05/lorawan1_0_2-20161012_1398_1.pdf).
 
-### [Ready to Use Devices](ready-to-use)
+### [Ready to Use Devices][devices.ready-to-use]
 
+### [Development Devices][devices.development]
 
-### [Development Devices](development) 
+[devices.ready-to-use]: /docs/use-the-network/devices/ready-to-use
+[devices.development]: /docs/use-the-network/devices/development
 
 
 
