clean up and link fixes

--- a/docs/blockchain/blockchain.mdx
+++ b/docs/blockchain/blockchain.mdx
@@ -11,16 +11,23 @@ The Helium blockchain is a new blockchain built from the ground up to incentiviz
 
 
 
-* [Blockchain Primitives](blockchain/blockchain-primitives) 
-* [Mining $HNT](blockchain/mining)
-* [Proof of Coverage](blockchain/proof-of-coverage)
-* [Consensus Protocol](blockchain/consensus-protocol) 
-* [The Helium Token](blockchain/helium-token)
-* [Oracles](blockchain/oracles) 
-* [Transaction Fees](blockchain/transaction-fees)
-* [Chain Variables](blockchain/chain-variables)
+* [Blockchain Primitives][blockchain.primitives]
+* [Mining $HNT][blockchain.mining]
+* [Proof of Coverage][blockchain.proof-of-coverage]
+* [Consensus Protocol][blockchain.consensus-protocol]
+* [The Helium Token][blockchain.helium-token]
+* [Oracles][blockchain.oracles]
+* [Transaction Fees][blockchain.transaction-fees]
+<!-- * [Chain Variables][blockchain.chain-variables] -->
 
-
+[blockchain.primitives]:/docs/blockchain/blockchain-primitives
+[blockchain.mining]: /docs/blockchain/mining
+[blockchain.proof-of-coverage]: /docs/blockchain/proof-of-coverage
+[blockchain.consensus-protocol]: /docs/blockchain/consensus-protocol
+[blockchain.helium-token]: /docs/blockchain/helium-token
+[blockchain.oracles]: /docs/blockchain/oracles
+[blockchain.transaction-fees]: /docs/blockchain/transaction-fees
+<!-- [blockchain.chain-variables]: /docs/blockchain/chain-variables -->
  
 
 
