--- a/docs/use-the-network/devices/development/st-b-l072z-lrwan1/arduino.mdx
+++ b/docs/use-the-network/devices/development/st-b-l072z-lrwan1/arduino.mdx
@@ -130,4 +130,4 @@ Now let's head back to [Helium Console](https://console.helium.com) and look at 
 
 <img src={useBaseUrl('img/use-the-network/devices/development/st-b-l072z-lrwan1/st-disco-console-events.png')}/>
 
-Congratulations! You have just transmitted data on the Helium network! The next step is to learn how to use your device data to build applications, visit our Integrations docs [here](../../console/integrations/).
+Congratulations! You have just transmitted data on the Helium network! The next step is to learn how to use your device data to build applications, visit our Integrations docs [here](#).
